PDF Item Bar Right Grid Item: Text overflows prevent text overflows for any long text surpassing our Item Bar. Should probably test that on our Left Grid Item as well.

--- a/src/view/css/App.css
+++ b/src/view/css/App.css
@@ -91,6 +91,12 @@
   border-left-width: 0;
   background-color: #E7D3D3;
 
+  /* Prevent overflow */
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
 .pdf-item-bar-open {
   background-color: #EB3A3A;
   opacity: 0.72;
@@ -102,8 +108,6 @@
   margin-left: auto; 
   margin-right: 0;
   justify-content: center;
-  overflow: hidden;
-  text-overflow: "-";
 }
 
 .App-link {
